each of his releases consisted of a single source code tarball, and
that tarball was not signed.  Bryan removed some redundant sources of
information from the package and the web site.


DETAILED RELEASE HISTORY:


(BJH means Bryan Henderson <bryanh@giraffe-data.com>)
(SAB means Steven A. Bone <sbone@pobox.com>)

1.03 - not yet

  * BJH: Add User-Agent to Curl transport, Xmlrpc program.

  * BJH: Fix bug: xmlrpc_serialize_base64_data() doesn't free working
    storage.

  * BJH: Fix bug: 'make install' doesn't install libxmlrpc_xmltok.
    
  * BJH: Don't build client library if not building any client XML      
    transport.

  * BJH: Make Curl do cookies (session only) and persistent connections.
    This is only for calls through the synchronous interface, and the
    synchronous interface is no longer thread safe -- you can have only
    one thread making calls through it.

  * BJH: Add Curl SSL_NO_VERIFYPEER, SSL_NO_VERIFYHOST control.

  * BJH: Break up 'rpctest', rename to 'test'.

  * BJH: Renamed CGI stuff, add non-builtin-registry style of CGI server.

  * BJH: Builds on AIX - new __inline definition, uint32_t instead of uint32,
    et al.

  * BJH: Add xmlrpc_datetime_new_sec(), xmlrpc_read_datetime_sec().

  * BJH: libwww transport does not do the weird handling of the "auth"
    cookie.  It used to have a global cookie (one cookie shared by all
    servers) called "auth", which it maintained in an environment
    variable.

  * BJH: new C++ library designed for pure C++ applications
    (Application never sees the underlying C structures or reference
    counts).

  * BJH: interface header files renamed from xmlrpc_xxx to xmlrpc-c/xxx
    (old names installed a symbolic links for backward compatibility).

  * BJH: Fix mysterious disablement of forking Abyss (ServerRunForked()).

1.02 - April 4, 2005

  * SAB: Win32 http.sys server: Add new project and sample as 
    an alternative to Abyss on current Win32 platforms.  Does