@@ -51,5 +51,6 @@ test_server_cgi(void) {
 
         TEST(memcmp(cgiResponse, cgiResponse1, bytesRead) == 0);
     }
+    printf("\n");
     printf("CGI tests done.\n");
 }
